# websocket-rawl

./: .rustfmt.toml  Cargo.toml  README.md
src/: client.rs  lib.rs  ssl.rs
websocket-codec/: .rustfmt.toml  Cargo.toml
websocket-codec/src/: close.rs  frame.rs  lib.rs  mask.rs  message.rs  opcode.rs  protocol.rs  upgrade.rs
websocket-lite/: Cargo.toml
websocket-lite/src/: client.rs  lib.rs  ssl.rs
