[package]
name = "websocket-rawl"
description = "A fast, low-overhead WebSocket client"
version = "0.1.20240927"
edition = "2021"

[dependencies]
base64 = "0.22"
bytes = "1"
futures-util = { version = "0.3", default-features = false }
native-tls = "0.2"
rand = "0.8"
tokio = { version = "1", default-features = false, features = [
    "net",
    "io-util",
] }
tokio-native-tls = "0.3"
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
url = "2"
websocket-codec = { version = "0.1.20240924", path = "./websocket-codec" }
