[package]
name = "websocket-codec"
description = "A Tokio codec for the websocket protocol"
version = "0.1.20240924"
edition = "2021"

[dependencies]
base64 = "0.13"
byteorder = "1"
bytes = "1"
httparse = "1"
rand = "0.8"
sha1 = "0.6"
tokio-util = { version="0.7", default-features = false, features = ["codec"] }
