[package]
name = "websocket-codec"
description = "A Tokio codec for the websocket protocol"
version = "0.1.20241103"
edition = "2021"

[dependencies]
base64 = "0.22"
byteorder = "1"
bytes = "1"
httparse = "1"
rand = "0.8"
sha1_smol = "1.0.1"
tokio-util = { version="0.7", default-features = false, features = ["codec"] }
